fix(fetch-resource): modify fetch resource
modify logic fetch resource aggregate
