# fetch-app/docs/swagger.json
@@ -1,17 +1,88 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This API is for fetch \u0026 mapping resources",
+        "title": "Fetch apps",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "MIT",
+            "url": "https://opensource.org/licenses/MIT"
+        },
+        "version": "1.0.0"
     },
     "paths": {
-        "/v1/display-with-price": {
+        "/api/v1/display/resource-aggregation": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "This api is for display aggregation of resources",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Resources"
+                ],
+                "summary": "Resources Aggregation",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/restapi.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/fetchresourceaggregation.InportResponse"
+                                        },
+                                        "errorCode": {
+                                            "type": "string"
+                                        },
+                                        "errorMessage": {
+                                            "type": "string"
+                                        },
+                                        "success": {
+                                            "type": "boolean"
+                                        },
+                                        "traceId": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/display/resource-with-price": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "This api is for display resources with price USD",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Resources"
                 ],
                 "summary": "Resources With Price USD",
                 "responses": {
@@ -47,9 +118,127 @@
                     }
                 }
             }
+        },
+        "/api/v1/user": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "This api is for display resources with price USD",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Display user claim",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/restapi.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/displayoneuser.InportResponse"
+                                        },
+                                        "errorCode": {
+                                            "type": "string"
+                                        },
+                                        "errorMessage": {
+                                            "type": "string"
+                                        },
+                                        "success": {
+                                            "type": "boolean"
+                                        },
+                                        "traceId": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "displayoneuser.InportResponse": {
+            "type": "object",
+            "properties": {
+                "user": {
+                    "type": "object",
+                    "additionalProperties": true
+                }
+            }
+        },
+        "fetchresourceaggregation.Aggregate": {
+            "type": "object",
+            "properties": {
+                "avg": {
+                    "type": "number"
+                },
+                "max": {
+                    "type": "integer"
+                },
+                "med": {
+                    "type": "number"
+                },
+                "min": {
+                    "type": "integer"
+                }
+            }
+        },
+        "fetchresourceaggregation.AggregateResources": {
+            "type": "object",
+            "properties": {
+                "aggregate_price": {
+                    "$ref": "#/definitions/fetchresourceaggregation.Aggregate"
+                },
+                "aggregate_size": {
+                    "$ref": "#/definitions/fetchresourceaggregation.Aggregate"
+                },
+                "area_provinsi": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "size": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "week": {
+                    "type": "integer"
+                }
+            }
+        },
+        "fetchresourceaggregation.InportResponse": {
+            "type": "object",
+            "properties": {
+                "result": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/fetchresourceaggregation.AggregateResources"
+                    }
+                }
+            }
+        },
         "fetchresourcewithprice.Area": {
             "type": "object",
             "properties": {
@@ -126,6 +315,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
